# robot_body_filter

./: .clang-format  CMakeLists.txt  package.xml
.github/workflows/: main.yml
examples/: body_filter_node.launch.py
include/robot_body_filter/: RayCastingShapeMask.h  RobotBodyFilter.h  TfFramesWatchdog.h
include/robot_body_filter/utils/: bodies.h  cloud-impl.hpp  cloud.h  filter_utils.hpp  obb.hpp  string_utils.hpp  tf2_eigen.h  tf2_sensor_msgs.h  time_utils.hpp
msg/: OrientedBoundingBoxStamped.msg  SphereStamped.msg
src/: RayCastingShapeMask.cpp  RobotBodyFilter.cpp  TFFramesWatchdog.cpp
src/utils/: cloud.cpp  obb.cpp  shapes.cpp  string_utils.cpp  tf2_eigen.cpp  tf2_sensor_msgs.cpp  time_utils.cpp
test/: test_bodies.cpp  test_filter_utils.cpp
